# libclaude

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  session.rs
src/config/: auth.rs  builder.rs  mod.rs  options.rs
src/process/: io.rs  mod.rs  spawn.rs
src/protocol/: content.rs  events.rs  messages.rs  mod.rs  usage.rs
src/stream/: events.rs  mod.rs  response.rs
src/tools/: mod.rs  observer.rs
tests/: integration.rs
tests/common/: mod.rs
